Reimplements a large part of the multiswitch twin